commit of the eclipse project that autoload correctly at opening

--- a/c++/.cproject
+++ b/c++/.cproject
@@ -252,5 +252,7 @@
     </storageModule>
     	
     <storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
+    	
+    <storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
     
 </cproject>
