--- a/c/.cproject
+++ b/c/.cproject
@@ -85,7 +85,7 @@
                     					
                     <sourceEntries>
                         						
-                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="chapter-2-number-theory"/>
                         					
                     </sourceEntries>
                     				
@@ -179,7 +179,7 @@
                     					
                     <sourceEntries>
                         						
-                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="chapter-2-number-theory"/>
                         					
                     </sourceEntries>
                     				
