--- a/c/makefile
+++ b/c/makefile
@@ -1,4 +1,5 @@
 all: main.o
-clean : rm main.o
-main.o:
-	gcc chapter-2-number-theory/euclidean_algorithm.c
+clean : rm a.exe chapter-2-number-theory/*.o
+#SRCDIR= chapter-2-number-theory
+main.o : 
+	gcc chapter-2-number-theory/main.c chapter-2-number-theory/euclidean_algorithm.c chapter-2-number-theory/euclidean_algorithm.h chapter-2-number-theory/extended_euclidean_algorithm.c chapter-2-number-theory/extended_euclidean_algorithm.h 
