--- a/c/makefile
+++ b/c/makefile
@@ -2,4 +2,7 @@ all: main.o
 clean : rm a.exe chapter-2-number-theory/*.o
 #SRCDIR= chapter-2-number-theory
 main.o : 
-	gcc chapter-2-number-theory/main.c chapter-2-number-theory/euclidean_algorithm.c chapter-2-number-theory/euclidean_algorithm.h chapter-2-number-theory/extended_euclidean_algorithm.c chapter-2-number-theory/extended_euclidean_algorithm.h 
+	gcc chapter-2-number-theory/main.c \
+	chapter-2-number-theory/euclidean_algorithm.c chapter-2-number-theory/euclidean_algorithm.h \
+	chapter-2-number-theory/extended_euclidean_algorithm.c chapter-2-number-theory/extended_euclidean_algorithm.h \
+	chapter-2-number-theory/miller_rabin.c chapter-2-number-theory/miller_rabin.h
